Fenster: Aufgabenzettel, Erstelle Mitarnbeiter, Mitarbeiter sind angelegt. Man kann mitarbeiter in db erstellen und auf Seite Mitarbeiter eine Liste von allen hinterlegten Mitarbeitern ansehen --> Darstellung der Mitarbeiter auf Website

--- a/gat_erster_versuch/aufgabenzettel/templates/aufgabenbereich.html
+++ b/gat_erster_versuch/aufgabenzettel/templates/aufgabenbereich.html
@@ -14,11 +14,15 @@
     <div class="container">
         <ul class="nav bg-info">
           <li class="nav-item">
-            <a class="nav-link link-light" href="/">Aufgabenbereich</a>
+            <a class="nav-link link-light" href="/aufgabenzettel">Aufgabenbereich</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link-light" href="/mitarbeiter">Mitarbeiter</a>
+            <a class="nav-link link-light" href="/erstelle_mitarbeiter">Erstelle Mitarbeiter</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link link-light" href="/alle_mitarbeiter">Mitarbeiter</a>
+          </li>
+        </ul>
         </ul>
 
 <br>
